add an overlay tint that users can click on to toggle menu status

--- a/assets/scss/components/_OverlayNav.scss
+++ b/assets/scss/components/_OverlayNav.scss
@@ -115,3 +115,16 @@
     top: -73px;
   }
 }
+
+.OverlayNav__tint {
+  &.active {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background: black;
+    background: rgba(black, .4);
+    z-index: 888;
+  }
+}
