add top margin to homepage button

--- a/assets/scss/components/_HomeHero.scss
+++ b/assets/scss/components/_HomeHero.scss
@@ -32,6 +32,10 @@
     font-size: 35px;
   }
 
+  @include breakpoint(medium) {
+    margin-top: 20px;
+  }
+
   &:hover {
     color: white;
     background: rgba($myPink, 1);
